# ndn-skeleton-apps

./: README.md
PyNDN/: client.py  server.py
jNDN/app/: build.gradle
jNDN/app/src/main/: AndroidManifest.xml
jNDN/app/src/main/java/examples/cs/ucla/edu/jndn/: MainActivity.java
jNDN/app/src/main/res/layout/: fragment_main.xml
jNDN/app/src/main/res/values/: strings.xml
ndn-cxx-cmake/: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp
ndn-cxx-makefile/: Makefile  README.md
ndn-cxx-waf/: .gitignore  README.md  waf  wscript
ndn-js/: README.md  client.html
